--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -14,7 +14,7 @@
     Tubo una infancia sociable.</P>
 
     <h1>ADOLESCENCIA</h1>
-    <p>básicamente fue basada en estudiar desde el 2005  a sus 5 años, hasta 2016 a sus 17 años, Estudio la primaria (2005-2010) y el bachiller (2010-2016) en el colegio Juan Pablo II ubicado en el mismo barrio, destacado por su buen comportamiento ademas de académicamente por sus capacidades numéricas participando en olimpiadas matemáticas organizadas por la Universidad Del Valle. Salio con el titulado de bachiller técnico enauxiliar administrativo.
+    <p>básicamente fue basada en estudiarn desde el 2005  a sus 5 años, hasta 2016 a sus 17 años, Estudio la primaria (2005-2010) y el bachiller (2010-2016) en el colegio Juan Pablo II ubicado en el mismo barrio, destacado por su buen comportamiento ademas de académicamente por sus capacidades numéricas participando en olimpiadas matemáticas organizadas por la Universidad Del Valle. Salio con el titulado de bachiller técnico enauxiliar administrativo.
     </p>
     <img src="todos.jpeg" alt="">
     <img src="grado.jpeg" alt="">
