--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -27,6 +27,11 @@
     <img src="he.jpeg" alt="">
     <img src="U.jpeg" alt="">
     <img src="sena.jpeg" alt="">
-
+    
+    <h1> Gustos </h1>
+    <p>Algunas de las cosas o temas, que le gustan o apasionan además de aprender cosas nuevas:
+        -	Los números
+        -	La tecnóloga
+        -	Las motos.
 </body>
 </html> 
