--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -27,11 +27,17 @@
     <img src="he.jpeg" alt="">
     <img src="U.jpeg" alt="">
     <img src="sena.jpeg" alt="">
-    
+
     <h1> Gustos </h1>
     <p>Algunas de las cosas o temas, que le gustan o apasionan además de aprender cosas nuevas:
         -	Los números
         -	La tecnóloga
         -	Las motos.
+
+    </p>
+    <img src="n.jpeg" alt="">
+    <img src="tecno.jpeg" alt="">
+<img src="m.jpeg" alt="">
+
 </body>
 </html> 
